tests/react_experimental/react_experimental.exp
Error ------------------------------------------------------------------------------------------- startTransition.js:8:7

Cannot call `React.startTransition` because function [1] requires another argument. [incompatible-call]

   startTransition.js:8:7
     8| React.startTransition(); // Error: function requires another argument
              ^^^^^^^^^^^^^^^

References:
   <BUILTINS>/react.js:910:37
   910|     declare function startTransition(() => void): void;
                                            ^^^^^^^^^^^^^^^^^^ [1]


Error ------------------------------------------------------------------------------------ useDeferredValue_hook.js:6:30

Cannot call `React.useDeferredValue` because no more than 1 argument is expected by function type [1]. [extra-arg]

   useDeferredValue_hook.js:6:30
     6| React.useDeferredValue(true, {}); // Error: no more than 1 argument is expected by function type
                                     ^^

References:
   <BUILTINS>/react.js:895:34
   895|     declare hook useDeferredValue<T>(value: T): T;
                                         ^^^^^^^^^^^^^^^^ [1]


Error --------------------------------------------------------------------------------------- useTransition_hook.js:5:21

Cannot call `React.useTransition` because no arguments are expected by function type [1]. [extra-arg]

   useTransition_hook.js:5:21
     5| React.useTransition({}); // Error: no arguments are expected by function type
                            ^^

References:
   <BUILTINS>/react.js:903:31
   903|     declare hook useTransition(): [boolean, (() => void) => void];
                                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]


Error --------------------------------------------------------------------------------------- useTransition_hook.js:12:2

Cannot cast `isPending` to function type because boolean [1] is incompatible with function type [2]. [incompatible-cast]

   useTransition_hook.js:12:2
    12| (isPending: (() => void) => void); // Error: boolean is incompatible with function type
         ^^^^^^^^^

References:
   <BUILTINS>/react.js:903:36
   903|     declare hook useTransition(): [boolean, (() => void) => void];
                                           ^^^^^^^ [1]
   useTransition_hook.js:12:13
    12| (isPending: (() => void) => void); // Error: boolean is incompatible with function type
                    ^^^^^^^^^^^^^^^^^^^^ [2]


Error --------------------------------------------------------------------------------------- useTransition_hook.js:13:2

Cannot cast `startTransition` to boolean because function type [1] is incompatible with boolean [2]. [incompatible-cast]

   useTransition_hook.js:13:2
    13| (startTransition: boolean); // Error: function type is incompatible with boolean
         ^^^^^^^^^^^^^^^

References:
   <BUILTINS>/react.js:903:45
   903|     declare hook useTransition(): [boolean, (() => void) => void];
                                                    ^^^^^^^^^^^^^^^^^^^^ [1]
   useTransition_hook.js:13:19
    13| (startTransition: boolean); // Error: function type is incompatible with boolean
                          ^^^^^^^ [2]


Error --------------------------------------------------------------------------------------- useTransition_hook.js:16:1

Cannot call `startTransition` because function [1] requires another argument. [incompatible-call]

   useTransition_hook.js:16:1
    16| startTransition(); // Error: function requires another argument
        ^^^^^^^^^^^^^^^

References:
   <BUILTINS>/react.js:903:45
   903|     declare hook useTransition(): [boolean, (() => void) => void];
                                                    ^^^^^^^^^^^^^^^^^^^^ [1]



Found 6 errors
